--- a/_mobile.scss
+++ b/_mobile.scss
@@ -2,7 +2,7 @@
     .center {
         padding-left: 16px;
         padding-right: 16px;
-        
+
     }
 
     .header {
@@ -76,4 +76,35 @@
             }
         }
     }
+
+    .middle-top {
+        display: flex;
+        flex-direction: column;
+
+        &__left {
+            padding-bottom: 64px;
+            padding-top: 180px;
+            align-items: center;
+
+            &_title {
+                font-size: 32px;
+                line-height: 39px;
+            }
+
+            &_text {
+                font-size: 14px;
+                line-height: 22px;
+                display: flex;
+                align-items: center;
+                text-align: center;
+            }
+        }
+
+
+    }
+
+    .game1-img {
+        max-width: 344px;
+    }
+
 }
