--- a/style.css
+++ b/style.css
@@ -84,7 +84,6 @@ a {
   display: grid;
   gap: 32px;
   grid-template-columns: repeat(12, 1fr);
-  padding-bottom: 128px;
 }
 .nav__game {
   grid-column: span 4;
@@ -135,6 +134,62 @@ a {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+.middle-top {
+  background-color: #000915;
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  align-items: center;
+  padding-bottom: 233px;
+}
+.middle-top__left {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 32px;
+  max-width: 584px;
+  grid-column: span 6;
+}
+.middle-top__left_title {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 59px;
+  color: #fff;
+}
+.middle-top__left_text {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 32px;
+  color: #fff;
+}
+.middle-top__right {
+  grid-column: span 6;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.buttons-box_buttonGameOne {
+  box-sizing: border-box;
+  background: #9C0332;
+  border-radius: 30px;
+  height: 48.6px;
+  width: 234px;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  color: #fff;
+  border: none;
+  transition: all 0.3s;
+}
+.buttons-box_buttonGameOne:hover {
+  cursor: pointer;
 }
 
 @media (max-width: 430px) {
@@ -195,5 +250,28 @@ a {
     padding-bottom: 32px;
     padding-left: 16px;
     margin: 0;
+  }
+  .middle-top {
+    display: flex;
+    flex-direction: column;
+  }
+  .middle-top__left {
+    padding-bottom: 64px;
+    padding-top: 180px;
+    align-items: center;
+  }
+  .middle-top__left_title {
+    font-size: 32px;
+    line-height: 39px;
+  }
+  .middle-top__left_text {
+    font-size: 14px;
+    line-height: 22px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+  }
+  .game1-img {
+    max-width: 344px;
   }
 }/*# sourceMappingURL=style.css.map */
