changed _mobile.scss and style.scss

--- a/_mobile.scss
+++ b/_mobile.scss
@@ -63,7 +63,7 @@
         height: 964px;
 
         &__game {
-            max-width: 343px;
+            width: 100%;
             height: 300px;
             transition: all .3s;
             position: relative;
