--- a/style.scss
+++ b/style.scss
@@ -107,7 +107,7 @@ $color-text: #fff;
         display: flex;
         justify-content: flex-start;
         align-items: flex-end;
-        max-width: 388px;
+        width: 100%;
         max-height: 300px;
         border: none;
         transition: all .3s;
