--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ a {
   display: flex;
   justify-content: flex-start;
   align-items: flex-end;
-  max-width: 388px;
+  width: 100%;
   max-height: 300px;
   border: none;
   transition: all 0.3s;
@@ -240,7 +240,7 @@ a {
     height: 964px;
   }
   .nav__game {
-    max-width: 343px;
+    width: 100%;
     height: 300px;
     transition: all 0.3s;
     position: relative;
