--- a/_mobile.scss
+++ b/_mobile.scss
@@ -1,4 +1,4 @@
-@media (max-width: 430px) {
+@media (max-width: 767px) {
     .center {
         padding-left: 16px;
         padding-right: 16px;
@@ -80,6 +80,7 @@
     .middle-top {
         display: flex;
         flex-direction: column;
+        padding-bottom: 85px;
 
         &__left {
             padding-bottom: 64px;
@@ -106,5 +107,37 @@
     .game1-img {
         max-width: 344px;
     }
+    
 
+    .middle-middle {
+        display: flex;
+        flex-direction: column-reverse;
+        padding-bottom: 90px;
+        padding-top: 0;
+
+        &__right {
+            padding-bottom: 64px;
+            padding-top: 51px;
+            align-items: center;
+
+            &_title {
+                font-size: 32px;
+                line-height: 39px;
+            }
+
+            &_text {
+                font-size: 14px;
+                line-height: 22px;
+                display: flex;
+                align-items: center;
+                text-align: center;
+            }
+        }
+
+
+    }
+
+    .game1-img {
+        max-width: 344px;
+    }
 }
